# matpower-pip

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  COMMANDS.md  CONTRIBUTING.md  LICENSE  README.md  commands.md  matpower_downloader.py  pyproject.toml  requirements-dev.txt  requirements-latest.txt  requirements-lint.txt  setup.py
.github/workflows/: build.yml  publish.yml
dev/: check_runpf.ipynb  check_versions.ipynb  download_matpower.ipynb  mock_install.ipynb
matpowerpip/: __init__.py  downloader.py  setup.py
notebooks/: add_generator_disable.ipynb  add_new_branch.ipynb  add_new_generator.ipynb  add_new_row.ipynb  derate_line.ipynb  find_case.ipynb  find_islands.ipynb  inspect_mpc.ipynb  looping_many_cases.ipynb  makeYbus.ipynb  most_ex_cases_path.ipynb  plot_cost_curve.ipynb  reduce_capacity.ipynb  reduce_system.ipynb  remove_tap.ipynb  run_matlab_cmd.ipynb  run_matpower_cmd.ipynb  run_mpc_from_drive.ipynb  run_octave_cmd.ipynb  runcpf.ipynb  runopf_pypglib.ipynb  runpf.ipynb  runpf_matlab.ipynb  runpf_pmax.ipynb  runuopf.ipynb  split_branch.ipynb
tests/: test_core_functionality.py
tests/data/: case9_reduced.m
