[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matpower"
description = 'Make MATPOWER installable from PyPI.'
readme = "README.md"
requires-python = ">=3.7.1"
keywords = []
authors = [
  {name = "Muhammad Yasirroni", email = "muhammadyasirroni@gmail.com"},
]
maintainers = [
  {name = "Muhammad Yasirroni", email = "muhammadyasirroni@gmail.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific Engineering :: Mathematics",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
octave = [
  "oct2py>=5.5.1",
]
dev = [
  "pytest>=7.2.0",
  "pytest-xdist>=3.1.0",
  "nbmake>=1.3.5",
  "pre-commit>=2.21.0",
  "autopep8>=2.0.1",
  "ruff>=0.0254",
]

[project.urls]
Documentation = "https://github.com/yasirroni/matpower-pip#readme"
Issues = "https://github.com/yasirroni/matpower-pip/issues"
Source = "https://github.com/yasirroni/matpower-pip"

[tool.setuptools]
packages = ["matpower"]

[tool.pytest.ini_options]
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
