[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matpower"
description = 'Make MATPOWER installable from PyPI.'
readme = "README.md"
requires-python = ">=3.7.1"
keywords = []
authors = [
  {name = "Muhammad Yasirroni", email = "muhammadyasirroni@gmail.com"},
]
maintainers = [
  {name = "Muhammad Yasirroni", email = "muhammadyasirroni@gmail.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
octave = [
  "oct2py>=5.5.1",
]
dev = [
  "numpy>=1.21.5",  # latest support for 3.7
  "oct2py>=5.5.1",  # latest support for 3.7
  "matplotlib>=3.5.3",  # latest support of 3.7
  "jupyter>=1.0.0",
  "pytest>=7.2.0",
  "pytest-xdist>=3.1.0",
  "nbmake>=1.3.5",
  "pre-commit>=2.21.0",
  "autopep8>=2.0.1",
  "ruff>=0.0.254",
]

[project.urls]
Documentation = "https://github.com/yasirroni/matpower-pip#readme"
Issues = "https://github.com/yasirroni/matpower-pip/issues"
Source = "https://github.com/yasirroni/matpower-pip"

[tool.setuptools]
packages = ["matpower"]

[tool.autopep8]
in-place = true
recursive = true
verbose = true
max_line_length = 88
ignore = [
  "E402",  # temporarily due to nbqa did not support [tool.autopep8.per-file-ignores]
]
aggressive = 10

[tool.ruff]
fix = true
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B90",  # support <3.10
    "E402",  # temporarily due to nbqa did not support [tool.ruff.per-file-ignores]
]

[tool.ruff.per-file-ignores]
"tests/test_core_functionality.py" = ["E501"]
"notebooks/add_new_row.ipynb" = ["E402"]
"notebooks/inspect_mpc.ipynb" = ["E402"]
"notebooks/makeYbus.ipynb" = ["E402"]
"notebooks/plot_cost_curve.ipynb" = ["E402"]
"notebooks/remove_tap.ipynb" = ["E402"]
"notebooks/runpf.ipynb" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests", "notebooks"]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", ".ipynb_checkpoints"]

[tool.coverage.run]
source = ["tests", "notebooks"]

[coverage.paths]
source = "matpower"

[coverage.run]
branch = true

[coverage.report]
show_missing = true
